tests/fmt-suite-results12.txt
п»їcargo : warning: hiding a lifetime that's elided elsewhere is confusing
At line:1 char:1
+ cargo run -p fmt-suite --release 2>&1 | Out-File -Encoding UTF8 "test ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: hiding...re is confusing:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   --> vendor\tree-sitter-0.22.6\binding_rust\lib.rs:480:19
    |
480 |     pub fn logger(&self) -> Option<&Logger> {
    |                   ^^^^^            ^^^^^^^
    |                   |                ||
    |                   |                |the same lifetime is hidden here
    |                   |                the same lifetime is elided here
    |                   the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
    = note: `#[warn(mismatched_lifetime_syntaxes)]` on by default
help: use `'_` for type paths
    |
480 |     pub fn logger(&self) -> Option<&Logger<'_>> {
    |                                           ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> vendor\tree-sitter-0.22.6\binding_rust\lib.rs:851:22
    |
851 |     pub fn root_node(&self) -> Node {
    |                      ^^^^^     ^^^^ the same lifetime is hidden here
    |                      |
    |                      the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
851 |     pub fn root_node(&self) -> Node<'_> {
    |                                    ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> vendor\tree-sitter-0.22.6\binding_rust\lib.rs:859:34
    |
859 |     pub fn root_node_with_offset(&self, offset_bytes: usize, offset_extent: Point) -> Node {
    |                                  ^^^^^ the lifetime is elided here                    ^^^^ the same lifetime is 
hidden here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
859 |     pub fn root_node_with_offset(&self, offset_bytes: usize, offset_extent: Point) -> Node<'_> {
    |                                                                                           ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> vendor\tree-sitter-0.22.6\binding_rust\lib.rs:873:21
    |
873 |     pub fn language(&self) -> LanguageRef {
    |                     ^^^^^     ^^^^^^^^^^^ the same lifetime is hidden here
    |                     |
    |                     the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
873 |     pub fn language(&self) -> LanguageRef<'_> {
    |                                          ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> vendor\tree-sitter-0.22.6\binding_rust\lib.rs:893:17
    |
893 |     pub fn walk(&self) -> TreeCursor {
    |                 ^^^^^     ^^^^^^^^^^ the same lifetime is hidden here
    |                 |
    |                 the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
893 |     pub fn walk(&self) -> TreeCursor<'_> {
    |                                     ++++

warning: hiding a lifetime that's elided elsewhere is confusing
    --> vendor\tree-sitter-0.22.6\binding_rust\lib.rs:1033:21
     |
1033 |     pub fn language(&self) -> LanguageRef {
     |                     ^^^^^     ^^^^^^^^^^^ the same lifetime is hidden here
     |                     |
     |                     the lifetime is elided here
     |
     = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
     |
1033 |     pub fn language(&self) -> LanguageRef<'_> {
     |                                          ++++

warning: `tree-sitter` (lib) generated 6 warnings (run `cargo fix --lib -p tree-sitter` to apply 6 suggestions)
   Compiling lang-css v0.2.0 
(C:\Users\zawia\.antigravity\Development\ACTIVE_PROJECTS\Omni\OmniFormatter\crates\lang-css)
   Compiling core v0.2.0 (C:\Users\zawia\.antigravity\Development\ACTIVE_PROJECTS\Omni\OmniFormatter\crates\core)
   Compiling fmt-suite v0.2.0 
(C:\Users\zawia\.antigravity\Development\ACTIVE_PROJECTS\Omni\OmniFormatter\tests\fmt-suite)
    Finished `release` profile [optimized] target(s) in 21.21s
     Running `target\release\fmt-suite.exe`
[CSS] Parse: 0.30ms, Format: 0.07ms, Emit: 0.01ms
[CSS] Parse: 0.24ms, Format: 0.06ms, Emit: 0.02ms
[Go] Parse: 0.51ms, Format: 0.07ms, Emit: 0.04ms
[Go] Parse: 0.34ms, Format: 0.05ms, Emit: 0.03ms
[CSS] Parse: 0.04ms, Format: 0.01ms, Emit: 0.00ms
Evaluating language id...
Getting JS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Calling build_block...
Finished build_block.
[JS] Parse: 0.31ms, Format: 0.07ms, Emit: 0.01ms
[HTML] Parse: 0.27ms, Format: 0.81ms, Emit: 0.07ms
[CSS] Parse: 0.03ms, Format: 0.01ms, Emit: 0.00ms
Evaluating language id...
Getting JS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Calling build_block...
Finished build_block.
[JS] Parse: 0.18ms, Format: 0.03ms, Emit: 0.01ms
[HTML] Parse: 0.22ms, Format: 0.59ms, Emit: 0.02ms
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Calling build_block...
Finished build_block.
[TS] Parse: 0.88ms, Format: 0.24ms, Emit: 0.04ms
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Calling build_block...
Finished build_block.
[TS] Parse: 0.43ms, Format: 0.22ms, Emit: 0.03ms
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
[LESS] Parse: 0.37ms, Format: 0.05ms, Emit: 0.01ms
[LESS] Parse: 0.30ms, Format: 0.04ms, Emit: 0.01ms
[Python] Parse: 0.90ms, Format: 0.10ms, Emit: 0.01ms
[Python] Parse: 0.64ms, Format: 0.09ms, Emit: 0.01ms
[Rust] Parse: 0.83ms, Format: 0.11ms, Emit: 0.02ms
[SCSS] Parse: 0.50ms, Format: 0.09ms, Emit: 0.01ms
[SCSS] Parse: 0.44ms, Format: 0.07ms, Emit: 0.01ms
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Calling build_block...
Finished build_block.
[TS] Parse: 0.63ms, Format: 0.12ms, Emit: 0.02ms
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Calling build_block...
Finished build_block.
[TS] Parse: 0.39ms, Format: 0.11ms, Emit: 0.03ms
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.
Evaluating language id...
Getting TS language
Creating Parser::new()...
Calling set_language...
Calling parser.parse...
Finished parser.parse.

О“ГІГ¶О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ№
О“ГІГ¦         OmniFormatter Formatting Rules Test Suite           О“ГІГ¦
О“ГІГњО“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІГ‰О“ГІВҐ

О“ВЈГґ  test.ahk                                   6P  0F  0S
О“ВЈГґ  test.asm                                   6P  0F  0S
О“ВЈГґ  test.astro                                 6P  0F  0S
О“ВЈГґ  test.c                                     6P  0F  0S
О“ВЈГґ  test.clj                                   9P  0F  0S
О“ВЈГґ  test.cob                                   6P  0F  0S
О“ВЈГґ  test.cpp                                   6P  0F  0S
О“ВЈГґ  test.cs                                    9P  0F  0S
О“ВЈГґ  test.css                                   9P  0F  0S
О“ВЈГґ  test.cu                                    6P  0F  0S
О“ВЈГґ  test.d                                     6P  0F  0S
О“ВЈГґ  test.dart                                  6P  0F  0S
О“ВЈГґ  test.dockerfile                            8P  0F  0S
О“ВЈГґ  test.ejs                                   7P  0F  0S
О“ВЈГґ  test.erl                                   6P  0F  0S
О“ВЈГґ  test.ex                                    8P  0F  0S
О“ВЈГґ  test.f90                                   6P  0F  0S
О“ВЈГґ  test.fs                                    9P  0F  0S
О“ВЈГґ  test.gd                                    6P  0F  0S
О“ВЈГґ  test.go                                    8P  0F  0S
О“ВЈГґ  test.graphql                               8P  0F  0S
О“ВЈГґ  test.groovy                                6P  0F  0S
О“ВЈГґ  test.hbs                                   7P  0F  0S
О“ВЈГґ  test.hs                                    8P  0F  0S
О“ВЈГґ  test.html                                  9P  0F  0S
О“ВЈГґ  test.ini                                   6P  0F  0S
О“ВЈГґ  test.java                                  8P  0F  0S
О“ВЈГґ  test.jinja                                 8P  0F  0S
О“ВЈГґ  test.jl                                    6P  0F  0S
О“ВЈГґ  test.js                                   10P  0F  0S
О“ВЈГґ  test.json                                  8P  0F  0S
О“ВЈГґ  test.json5                                 8P  0F  0S
О“ВЈГґ  test.jsx                                   9P  0F  1S
   в”¬в•– [async-preserved               ] SKIP: no async in source
О“ВЈГґ  test.kt                                    6P  0F  0S
О“ВЈГґ  test.less                                 10P  0F  0S
О“ВЈГґ  test.liquid                                8P  0F  0S
О“ВЈГґ  test.lisp                                  6P  0F  0S
О“ВЈГґ  test.lua                                   9P  0F  0S
О“ВЈГґ  test.m                                     6P  0F  0S
О“ВЈГґ  test.makefile                              6P  0F  0S
О“ВЈГґ  test.md                                    8P  0F  0S
О“ВЈГґ  test.ml                                    6P  0F  0S
О“ВЈГґ  test.mm                                    6P  0F  0S
О“ВЈГґ  test.nim                                   6P  0F  0S
О“ВЈГґ  test.nix                                   6P  0F  0S
О“ВЈГґ  test.php                                   6P  0F  0S
О“ВЈГґ  test.pl                                    6P  0F  0S
О“ВЈГґ  test.ps1                                   6P  0F  0S
О“ВЈГґ  test.py                                    9P  0F  0S
О“ВЈГґ  test.r                                     6P  0F  0S
О“ВЈГґ  test.rb                                    9P  0F  0S
О“ВЈГґ  test.rs                                    9P  0F  0S
О“ВЈГґ  test.sass                                  9P  0F  0S
О“ВЈГґ  test.scala                                 6P  0F  0S
О“ВЈГґ  test.scm                                   6P  0F  0S
О“ВЈГґ  test.scss                                 11P  0F  0S
О“ВЈГ№  test.scss.bak                              0P  1F  0S
   О“ВЈГ№ [no-format-error               ] Formatter returned error: Internal error: No plugin registered for extension 'bak'
О“ВЈГґ  test.sh                                    8P  0F  0S
О“ВЈГґ  test.sol                                   6P  0F  0S
О“ВЈГґ  test.sql                                   7P  0F  0S
О“ВЈГґ  test.svelte                                6P  0F  0S
О“ВЈГґ  test.swift                                 9P  0F  0S
О“ВЈГґ  test.tex                                   6P  0F  0S
О“ВЈГґ  test.tf                                    9P  0F  0S
О“ВЈГґ  test.toml                                  7P  0F  0S
О“ВЈГґ  test.ts                                   10P  0F  0S
О“ВЈГґ  test.tsx                                   9P  0F  1S
   в”¬в•– [async-preserved               ] SKIP: no async in source
О“ВЈГґ  test.twig                                  8P  0F  0S
О“ВЈГґ  test.vue                                   6P  0F  0S
О“ВЈГґ  test.xml                                   7P  0F  0S
О“ВЈГґ  test.yaml                                  7P  0F  0S
О“ВЈГґ  test.zig                                   6P  0F  0S
О“ВЈГґ  test.zsh                                   8P  0F  0S

О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡
Results: 73 files  |  525 PASS  |  1 FAIL  |  2 SKIP

О“Г¶Г‡О“Г¶Г‡ Failures grouped by rule О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡О“Г¶Г‡

  [no-format-error               ]  (1 files)
      О“Г‡Гі test.scss.bak: Formatter returned error: Internal error: No plugin registered for extension 'bak'

О“ВҐГ®  SOME RULES FAILED. See details above.
error: process didn't exit successfully: `target\release\fmt-suite.exe` (exit code: 1)
